Overflow hidden bug fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,14 +13,18 @@ body {
   background-image: url("../images/background-img.png");
   background-size: 100% 1004px;
   background-repeat: no-repeat;
-  overflow: hidden;
 }
 
 [class*="__container"] {
   margin: 0 auto;
   max-width: 1140px;
+  overflow: hidden;
 
   @media (max-width: 1139px) {
     max-width: 100%;
   }
+}
+
+.main {
+  overflow: hidden;
 }
